reword a string for the benefit of translation

--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -119,7 +119,8 @@
                 condition=lose
             [/objective]
             [objective]
-                description= _ "Death of "+$trapper_name
+                #po: $trapper_name is now part of this string at the request of the Japanese translator:
+                description= _ "Death of $trapper_name"
                 condition=lose
             [/objective]
             {TURNS_RUN_OUT}
@@ -211,7 +212,7 @@
                 condition=lose
             [/objective]
             [objective]
-                description= _ "Death of "+$trapper_name
+                description= _ "Death of $trapper_name"
                 condition=lose
             [/objective]
             [objective]
