--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -66,7 +66,7 @@
                 condition=lose
             [/objective]
             [objective]
-                description= _ "Death of "+$trapper_name
+                description= _ "Death of $trapper_name"
                 condition=lose
             [/objective]
             {TURNS_RUN_OUT}
