use Glauco's actual rank in dialogue
addresses the only instance of #22 that I think I can fix for now

--- a/scenarios/01_The_Attack_to_Amoran.cfg
+++ b/scenarios/01_The_Attack_to_Amoran.cfg
@@ -3,6 +3,8 @@
 [scenario]
     # wmllint: directory spellings Amoran
     id=01_The_Attack_to_Amoran
+    #po: "on" would probably work better as a preposition here than "to",
+    #po: but "to" is already baked into the file path, and I don't want to break anything, so it can stay for now:
     name= _ "The Attack to Amoran"
     map_data="{~add-ons/A_Little_Adventure/maps/01_The_Attack_To_Amoran.map}"
 
