--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -733,11 +733,47 @@
         message= _ "Let's try to talk to him, and hear what he wants."
     [/message]
     {MOVE_UNIT id=Glauco 17 13}
-    [message]
-        speaker=Glauco
-        #po: TODO: use Glauco's actual rank; he's probably advanced past "sergeant" by now:
-        message= _ "I'm the sergeant Glauco, military commander of the city of Amoran! I ask to speak with the warlord called Gan-Tarkas."
-    [/message]
+    [store_unit]
+        variable=glauco_store
+        kill=no
+        [filter]
+            id=Glauco
+        [/filter]
+    [/store_unit]
+    [switch]
+        variable=glauco_store.type
+        [case]
+            value=Grand Marshal
+            [message]
+                speaker=Glauco
+                #po: this is the farthest Glauco can advance:
+                message= _ "I'm the grand marshal Glauco, military commander of the city of Amoran! I ask to speak with the warlord called Gan-Tarkas."
+            [/message]
+        [/case]
+        [case]
+            value=General
+            [message]
+                speaker=Glauco
+                #po: "general" in the sense of the military rank; this is as far as Glauco has usually made it for me:
+                message= _ "I'm the general Glauco, military commander of the city of Amoran! I ask to speak with the warlord called Gan-Tarkas."
+            [/message]
+        [/case]
+        [case]
+            value=Lieutenant
+            [message]
+                speaker=Glauco
+                #po: if the player hasn't been using Glauco much for combat, he might still be a lieutenant (has happened to me before):
+                message= _ "I'm the lieutenant Glauco, military commander of the city of Amoran! I ask to speak with the warlord called Gan-Tarkas."
+            [/message]
+        [/case]
+        [else]
+            [message]
+                speaker=Glauco
+                #po: if none of the other cases match, assume he's still a sergeant, as that was the default assumption before this switch statement was added:
+                message= _ "I'm the sergeant Glauco, military commander of the city of Amoran! I ask to speak with the warlord called Gan-Tarkas."
+            [/message]
+        [/else]
+    [/switch]
     {MOVE_UNIT id=Gan-Tarkas 19 11}
     [message]
         speaker=Gan-Tarkas
@@ -798,6 +834,7 @@
         terrain=Ce
     [/terrain]
 #endif
+    {CLEAR_VARIABLE glauco_store}
 #enddef
 
 #define 06_BOATS_01
