recheck which characters can die
closes #3

--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -69,6 +69,10 @@
                 description= _ "Death of $trapper_name"
                 condition=lose
             [/objective]
+            [objective]
+                description= _ "Death of Glubtrub"
+                condition=lose
+            [/objective]
             {TURNS_RUN_OUT}
             [gold_carryover]
                 bonus=yes
