--- a/scenarios/05_The_Lizards_Islands.cfg
+++ b/scenarios/05_The_Lizards_Islands.cfg
@@ -115,6 +115,9 @@
                 condition=lose
             [/objective]
             {TURNS_RUN_OUT}
+            [note]
+                description=_"The death of $trapper_name will no longer cause defeat."
+            [/note]
             [gold_carryover]
                 bonus=yes
                 carryover_percentage={ON_DIFFICULTY 80 70 60}
@@ -132,6 +135,7 @@
         name=start
 
         {UNSTORE_HEROES 6 21}
+        {UNMAKE_HERO $trapper_name}
 
         [modify_unit]
             [filter]
