--- a/scenarios/06_The_Last_Battle.cfg
+++ b/scenarios/06_The_Last_Battle.cfg
@@ -159,6 +159,9 @@
 #undef FACING_S
 
         {UNSTORE_HEROES 29 20}
+        # This should have already happened in the previous scenario, but just in case
+        # there's an old savefile sitting around or something, do it here, too:
+        {UNMAKE_HERO $trapper_name}
 
         [modify_unit]
             [filter]
