--- a/scenarios/01_The_Attack_to_Amoran.cfg
+++ b/scenarios/01_The_Attack_to_Amoran.cfg
@@ -250,6 +250,7 @@
             profile=portraits/Geobard.png
             side=1
             x,y=2,15
+            facing=se
             {IS_HERO}
             [modifications]
                 {TRAIT_LOYAL}
