almost ready for another release

--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -72,7 +72,7 @@
             [objective]
                 description= _ "Death of Glubtrub"
                 condition=lose
-            [/objective]
+            [/objective] #
             {TURNS_RUN_OUT}
             [gold_carryover]
                 bonus=yes
