--- a/units/Brawler.cfg
+++ b/units/Brawler.cfg
@@ -85,7 +85,7 @@
         first_time_only=no
 
         [filter_attack]
-            special=tail_stun
+            special_id=tail_stun
         [/filter_attack]
 
         [filter_second]
@@ -148,7 +148,7 @@
         name=defender_hits
         first_time_only=no
         [filter_second_attack]
-            special=tail_stun
+            special_id=tail_stun
         [/filter_second_attack]
         [filter]
             [not]
