make use of City Militia
(only first scenario is tested with them so far)

--- a/scenarios/01_The_Attack_to_Amoran.cfg
+++ b/scenarios/01_The_Attack_to_Amoran.cfg
@@ -41,7 +41,7 @@
         # wmllint: directory spellings Wesnothians
         team_name=Wesnothians
         user_team_name=_ "Wesnothians"
-        recruit=Peasant,Woodsman
+        recruit=Peasant,Woodsman,City Militia
         {FLAG_VARIANT loyalist}
         # When gold is left undefined it defaults to 100, so use that as a base amount:
         {GOLD 120 110 100}
@@ -258,7 +258,7 @@
                 {TRAIT_QUICK}
             [/modifications]
         [/unit]
-
+        [redraw][/redraw]
         {01_GEOBARD_ARRIVALS}
 
         [objectives]
@@ -294,7 +294,7 @@
     [/message]
     [store_unit]
         [filter]
-            type=Peasant,Woodsman
+            type=Peasant,Woodsman,City Militia
         [/filter]
         kill=yes
         variable=stored_civilians
