--- a/scenarios/02a_Battle_with_the_Bandits.cfg
+++ b/scenarios/02a_Battle_with_the_Bandits.cfg
@@ -60,6 +60,11 @@
     [event]
         name=prestart
 
+        [disallow_recruit]
+            side=1
+            type=Woodsman,Peasant,City Militia
+        [/disallow_recruit]
+
         {PLACE_IMAGE "scenery/oak-leaning.png" 11 4}
 
         # ***** setting scenarios variables *****
