--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -101,7 +101,7 @@
 
         [disallow_recruit]
             side=1
-            type=Woodsman,Peasant
+            type=Woodsman,Peasant,City Militia
         [/disallow_recruit]
 
         [objectives]
