--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -51,6 +51,11 @@
     [event]
         name=prestart
 
+        [disallow_recruit]
+            side=1
+            type=Woodsman,Peasant,City Militia
+        [/disallow_recruit]
+
         [objectives]
             side=1
             [objective]
