--- a/scenarios/06_The_Last_Battle.cfg
+++ b/scenarios/06_The_Last_Battle.cfg
@@ -134,6 +134,11 @@
             [/unstore_unit]
         {NEXT i}
 
+        [allow_recruit]
+            side=1
+            type=Woodsman,Peasant,City Militia
+        [/allow_recruit]
+
 #define FACING_S
     [+unit]
         facing=s
