--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -38,7 +38,7 @@
     [/message]
     [message]
         speaker=Glauco
-        message=_ "If necessary we'll call the peasants and the woodsmen to help us."
+        message=_ "If necessary, we'll call the peasants, the woodsmen, and the militia to help us."
     [/message]
     [message]
         speaker=Grunto
