--- a/scenarios/02b_Battle_with_the_Orcs.cfg
+++ b/scenarios/02b_Battle_with_the_Orcs.cfg
@@ -65,6 +65,12 @@
 
     [event]
         name=prestart
+
+        [disallow_recruit]
+            side=1
+            type=Woodsman,Peasant,City Militia
+        [/disallow_recruit]
+
         [objectives]
             side=1
             [objective]
