--- a/scenarios/05_The_Lizards_Islands.cfg
+++ b/scenarios/05_The_Lizards_Islands.cfg
@@ -95,6 +95,11 @@
     [event]
         name=prestart
 
+        [disallow_recruit]
+            side=1
+            type=Woodsman,Peasant,City Militia
+        [/disallow_recruit]
+
         [objectives]
             side=1
             [objective]
