--- a/scenarios/02a_Battle_with_the_Bandits.cfg
+++ b/scenarios/02a_Battle_with_the_Bandits.cfg
@@ -255,6 +255,7 @@
                 {TRAIT_RESILIENT}
             [/modifications]
         [/unit]
+        [redraw][/redraw]
         {VARIABLE divaid_alive true}
         {VARIABLE croquet_alive false}
         {VARIABLE trapper_name "Divaid"}
@@ -279,13 +280,14 @@
             [attack]
                 name=claws
                 description=_ "claws"
-                icon=attack/claws-animal.png
+                icon=attacks/claws-animal.png
                 type=blade
                 range=melee
-                damage=10
+                damage={ON_DIFFICULTY 11 10 9}
                 number=4
             [/attack]
         [/unit]
+        [redraw][/redraw]
         {VARIABLE ranfy_alive true}
         {VARIABLE fangy_alive false}
 
