final scenario tweaks
ensure units stored to recall list get recalled with full health

--- a/scenarios/06_The_Last_Battle.cfg
+++ b/scenarios/06_The_Last_Battle.cfg
@@ -134,6 +134,13 @@
             [/unstore_unit]
         {NEXT i}
 
+        [heal_unit]
+            [filter]
+                side=1
+                x,y=recall,recall
+            [/filter]
+        [/heal_unit]
+
         [allow_recruit]
             side=1
             type=Woodsman,Peasant,City Militia
@@ -256,6 +263,19 @@
             image="scenery/signpost.png"
             message= _ "Welcome to Amoran, the last town toward Est"
         [/message]
+    [/event]
+
+    [event]
+        name=recall
+        first_time_only=no
+        [filter]
+            side=1
+        [/filter]
+        [heal_unit]
+            [filter]
+                id=$unit.id
+            [/filter]
+        [/heal_unit]
     [/event]
 
     [event]
