--- a/utils/ALA_utils.cfg
+++ b/utils/ALA_utils.cfg
@@ -3,6 +3,9 @@
 #define DELAY TIME
     [delay]
         time={TIME}
+#ifdef DEBUG_MODE
+        accelerate=yes
+#endif
     [/delay]
 #enddef
 
@@ -13,6 +16,9 @@
     [/scroll_to]
     [delay]
         time={DELAY_TIME}
+#ifdef DEBUG_MODE
+        accelerate=yes
+#endif
     [/delay]
 #enddef
 
