--- a/scenarios/01_The_Attack_to_Amoran.cfg
+++ b/scenarios/01_The_Attack_to_Amoran.cfg
@@ -155,6 +155,9 @@
                 condition=lose
             [/objective]
             {TURNS_RUN_OUT}
+            [note]
+                description=_"Which leader you defeat will determine your next scenario."
+            [/note]
             note={NO_GOLD_CARRYOVER_NOTE}
         [/objectives]
 
@@ -276,6 +279,9 @@
                 condition=lose
             [/objective]
             {TURNS_RUN_OUT}
+            [note]
+                description=_"Which leader you defeat will determine your next scenario."
+            [/note]
             note={NO_GOLD_CARRYOVER_NOTE}
         [/objectives]
     [/event]
