--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -59,7 +59,7 @@
         [objectives]
             side=1
             [objective]
-                description= _ "Glauco reaches the signpost over the mountains"
+                description= _ "Glauco reaches the waypoint (marked by a monolith) over the mountains"
                 condition=win
             [/objective]
             [objective]
