clear some variables after use
there are too many of these; I can't do them all now...

--- a/scenarios/02a_Battle_with_the_Bandits.cfg
+++ b/scenarios/02a_Battle_with_the_Bandits.cfg
@@ -150,6 +150,8 @@
             [/switch]
             {MODIFY_TERRAIN $terrain_type $stored_woods[$i].x $stored_woods[$i].y}
         {NEXT i}
+        {CLEAR_VARIABLE changes}
+        {CLEAR_VARIABLE choice}
     [/event]
 
     [event]
