--- a/scenarios/07_Epilogue.cfg
+++ b/scenarios/07_Epilogue.cfg
@@ -139,7 +139,8 @@
         [/if]
 
         {EPILOGUE_GLAUCO}
-
+        
+        {CLEAR_VARIABLE croquet_alive}
         [endlevel]
             carryover_report=no
             replay_save=no
