S01: add additional dialogue
this further drives home how the scenario ends when one enemy leader is killed, for issue #33
Also, ensure that Geobard is present even if player debugs their way to victory before turn 4
Also, delete that unused "New Spearman" file

--- a/scenarios/01_The_Attack_to_Amoran.cfg
+++ b/scenarios/01_The_Attack_to_Amoran.cfg
@@ -158,7 +158,9 @@
             [note]
                 description=_"Which leader you defeat will determine your next scenario."
             [/note]
-            note={NO_GOLD_CARRYOVER_NOTE}
+            [gold_carryover]
+                carryover_percentage=0
+            [/gold_carryover]
         [/objectives]
 
         {NAMED_LOYAL_UNIT 1 (Bowman) 15 17 (Titus) ("Titus")}
@@ -236,6 +238,13 @@
 
     [event]
         name=turn 4
+        [fire_event]
+            name=Geobard_arrival
+        [/fire_event]
+    [/event]
+
+    [event]
+        name=Geobard_arrival
 
         [sound]
             name=horse-canter.wav
@@ -282,7 +291,9 @@
             [note]
                 description=_"Which leader you defeat will determine your next scenario."
             [/note]
-            note={NO_GOLD_CARRYOVER_NOTE}
+            [gold_carryover]
+                carryover_percentage=0
+            [/gold_carryover]
         [/objectives]
     [/event]
 
@@ -290,6 +301,9 @@
     [kill]
         side=2,3
     [/kill]
+    [fire_event]
+        name=Geobard_arrival
+    [/fire_event]
     [message]
         speaker=Geobard
         message= _ "Both orcs and bandits have fled! Looks like we won this battle!"
@@ -308,6 +322,20 @@
 #enddef
 
     [event]
+        name=attack end
+        [filter]
+            side=1
+        [/filter]
+        [filter_second]
+            id=Grunto
+        [/filter_second]
+        [message]
+            speaker=Dadoc
+            message= _ "Yikes, they're closing in on that Grunto! The plan won't work without him; I'd better start planning my escape, in case he's unable to fulfill his half of the pact..."
+        [/message]
+    [/event]
+
+    [event]
         name=last breath
         [filter]
             id=Grunto
@@ -320,13 +348,52 @@
             speaker=Dadoc
             message= _ "That stupid orc got himself killed, I'm not going to come to the same end as him. Let's retire, guys, we'll be back on another occasion, with stronger allies!"
         [/message]
+        [move_unit]
+            id=Dadoc
+            to_x=34,35
+            to_y=20,21
+        [/move_unit]
+        [store_unit]
+            [filter]
+                side=3
+            [/filter]
+            variable=s01_bandits
+        [/store_unit]
+        [foreach]
+            array=s01_bandits
+            [do]
+                [move_unit]
+                    id=$this_item.id
+                    to_x=35
+                    to_y=21
+                [/move_unit]
+                [kill]
+                    id=$this_item.id
+                [/kill]
+            [/do]
+        [/foreach]
         {VICTORY}
+        {CLEAR_VARIABLE s01_bandits}
         [endlevel]
             bonus=no
             {NEW_GOLD_CARRYOVER 0}
             result=victory
             next_scenario=02a_Battle_with_the_Bandits
         [/endlevel]
+    [/event]
+
+    [event]
+        name=attack end
+        [filter]
+            side=1
+        [/filter]
+        [filter_second]
+            id=Dadoc
+        [/filter_second]
+        [message]
+            speaker=Grunto
+            message= _ "That human we were supposed to work with doesn't look like he'll be able to fulfill his half of the pact! We just might have to leave if he fails us..."
+        [/message]
     [/event]
 
     [event]
@@ -342,7 +409,32 @@
             speaker=Grunto
             message= _ "Here's what happens to humans who are too weak! Let's go, guys, we have nothing more to do here, for today at least!"
         [/message]
+        [move_unit]
+            id=Grunto
+            to_x=20
+            to_y=1
+        [/move_unit]
+        [store_unit]
+            [filter]
+                side=2
+            [/filter]
+            variable=s01_orcs
+        [/store_unit]
+        [foreach]
+            array=s01_orcs
+            [do]
+                [move_unit]
+                    id=$this_item.id
+                    to_x=20
+                    to_y=1
+                [/move_unit]
+                [kill]
+                    id=$this_item.id
+                [/kill]
+            [/do]
+        [/foreach]
         {VICTORY}
+        {CLEAR_VARIABLE s01_orcs}
         [endlevel]
             bonus=no
             {NEW_GOLD_CARRYOVER 0}
