--- a/scenarios/07_Epilogue.cfg
+++ b/scenarios/07_Epilogue.cfg
@@ -139,8 +139,13 @@
         [/if]
 
         {EPILOGUE_GLAUCO}
-        
+
         {CLEAR_VARIABLE croquet_alive}
+#ifdef DEBUG_MODE
+        # just putting this here to help make sure everything gets cleaned up;
+        # see issue #32 on GitHub:
+        [inspect][/inspect]
+#endif
         [endlevel]
             carryover_report=no
             replay_save=no
