more clearing of variables
see issue #32

--- a/scenarios/02a_Battle_with_the_Bandits.cfg
+++ b/scenarios/02a_Battle_with_the_Bandits.cfg
@@ -152,6 +152,7 @@
         {NEXT i}
         {CLEAR_VARIABLE changes}
         {CLEAR_VARIABLE choice}
+        {CLEAR_VARIABLE stored_woods}
     [/event]
 
     [event]
@@ -493,6 +494,7 @@
             message= _ "Amoran is more safe, now! This will give us the time to take care of something else!"
         [/message]
         {STORE_HEROES}
+        {CLEAR_VARIABLE dadoc_founded}
         [endlevel]
             bonus=yes
             carryover_add=true
