--- a/scenarios/06_The_Last_Battle.cfg
+++ b/scenarios/06_The_Last_Battle.cfg
@@ -507,6 +507,7 @@
         speaker=Geobard
         message= _ "Those damned are all dead or escaped! Finally we finished!"
     [/message]
+    {CLEAR_VARIABLE stored_civilians}
     [endlevel]
         bonus=no
         carryover_percentage=0
