--- a/scenarios/07_Epilogue.cfg
+++ b/scenarios/07_Epilogue.cfg
@@ -141,6 +141,7 @@
         {EPILOGUE_GLAUCO}
 
         {CLEAR_VARIABLE croquet_alive}
+        {CLEAR_VARIABLE divaid_alive}
 #ifdef DEBUG_MODE
         # just putting this here to help make sure everything gets cleaned up;
         # see issue #32 on GitHub:
@@ -149,7 +150,11 @@
         [endlevel]
             carryover_report=no
             replay_save=no
+#ifdef DEBUG_MODE
+            linger_mode=yes
+#else
             linger_mode=no
+#endif
         [/endlevel]
     [/event]
 [/scenario]
