more variable-clearing, primarily in S02a
see issue #32

--- a/scenarios/02a_Battle_with_the_Bandits.cfg
+++ b/scenarios/02a_Battle_with_the_Bandits.cfg
@@ -35,6 +35,7 @@
         controller=human
         recruit=Bowman,Spearman
         x,y=5,3
+        facing=se
         shroud=yes
         gold=0
         {FLAG_VARIANT loyalist}
@@ -153,6 +154,11 @@
         {CLEAR_VARIABLE changes}
         {CLEAR_VARIABLE choice}
         {CLEAR_VARIABLE stored_woods}
+        {CLEAR_VARIABLE i}
+        {CLEAR_VARIABLE no_woods_tiles_percent}
+        {CLEAR_VARIABLE no_woods_tiles}
+        {CLEAR_VARIABLE no_woods_pos}
+        {CLEAR_VARIABLE terrain_type}
     [/event]
 
     [event]
@@ -217,6 +223,14 @@
             [/if]
             {VARIABLE_OP i add 1}
         )}
+        {CLEAR_VARIABLE i}
+        {CLEAR_VARIABLE x_hut}
+        {CLEAR_VARIABLE y_hut}
+        {CLEAR_VARIABLE x_min}
+        {CLEAR_VARIABLE x_max}
+        {CLEAR_VARIABLE y_min}
+        {CLEAR_VARIABLE y_max}
+        {CLEAR_VARIABLE type_village}
 
         # ***** choice of the Dadoc's hut *****
 
@@ -225,6 +239,7 @@
         {VARIABLE y_dadoc $hut_locations[$random].y}
         {CLEAR_VARIABLE hut_locations[$random]}
         {VARIABLE dadoc_founded false}
+        {CLEAR_VARIABLE random}
     [/event]
 
     [event]
@@ -417,6 +432,7 @@
                     message= _ "Find me don't mean catch me!"
                 [/message]
                 {VARIABLE dadoc_founded true}
+                {CLEAR_VARIABLE stored_dadoc}
             [/then]
         [/if]
     [/event]
@@ -456,6 +472,7 @@
             side=1
             amount=$hidden_gold
         [/gold]
+        {CLEAR_VARIABLE hidden_gold}
     [/event]
 
     [event]
@@ -495,6 +512,10 @@
         [/message]
         {STORE_HEROES}
         {CLEAR_VARIABLE dadoc_founded}
+        {CLEAR_VARIABLE second_unit_prob}
+        {CLEAR_VARIABLE x_dadoc}
+        {CLEAR_VARIABLE y_dadoc}
+        {CLEAR_VARIABLE hut_locations}
         [endlevel]
             bonus=yes
             carryover_add=true
