--- a/scenarios/07_Epilogue.cfg
+++ b/scenarios/07_Epilogue.cfg
@@ -142,6 +142,10 @@
 
         {CLEAR_VARIABLE croquet_alive}
         {CLEAR_VARIABLE divaid_alive}
+        {CLEAR_VARIABLE fangy_alive}
+        {CLEAR_VARIABLE ranfy_alive}
+        {CLEAR_VARIABLE pet_name}
+        {CLEAR_VARIABLE trapper_name}
 #ifdef DEBUG_MODE
         # just putting this here to help make sure everything gets cleaned up;
         # see issue #32 on GitHub:
