--- a/utils/ALA_story.cfg
+++ b/utils/ALA_story.cfg
@@ -2,6 +2,8 @@
 
 # TODO: all instances of the word "sergeant" in this file: check and see if they can be replaced by Glauco's actual rank
 
+# TODO: story strings in this file go on too long; see issue #2 on GitHub
+
 #define SCENARIO_01_STORY_01
     # wmllint: general spellings Wesnoth Li'sar Irdya Elensefar Weldyn
     # wmllint: directory spellings Abelardo Gozman Guberto Piegafetta
