more variable clearing
see issue #32

--- a/scenarios/02a_Battle_with_the_Bandits.cfg
+++ b/scenarios/02a_Battle_with_the_Bandits.cfg
@@ -395,6 +395,8 @@
                         [/then]
                     [/if]
                     {CLEAR_VARIABLE hut_locations[$i]}
+                    {CLEAR_VARIABLE second_unit_poss}
+                    {CLEAR_VARIABLE unit_type}
                 [/then]
             [/if]
         {NEXT i}
@@ -433,6 +435,7 @@
                 [/message]
                 {VARIABLE dadoc_founded true}
                 {CLEAR_VARIABLE stored_dadoc}
+                {CLEAR_VARIABLE unit_type}
             [/then]
         [/if]
     [/event]
