--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -299,7 +299,7 @@
         [/modify_unit]
 
         {STORE_HEROES}
-
+        {CLEAR_VARIABLE glubtrub_active}
         [endlevel]
             bonus=yes
             carryover_add=true
