--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -93,6 +93,7 @@
         {FOREACH cave_position i}
             {PLACE_IMAGE scenery/mine-abandoned.png $cave_position[$i].x $cave_position[$i].y}
         {NEXT i}
+        {CLEAR_VARIABLE i}
 
         {SCATTER_IMAGE (terrain=H*) 10 scenery/pine1.png}
         {SCATTER_IMAGE (terrain=H*) 10 scenery/pine2.png}
@@ -118,6 +119,7 @@
             layer=overlay
             x,y=$x_dwarf,$y_dwarf
         [/terrain]
+        {CLEAR_VARIABLE hut_position}
     [/event]
 
     [event]
@@ -443,12 +445,15 @@
             message= _ "We passed those hills, finally! We can continue on to reach the nereids now!"
         [/message]
         {STORE_HEROES}
+        {CLEAR_VARIABLE cave_position}
+        {CLEAR_VARIABLE chasm_position}
+        {CLEAR_VARIABLE x_dwarf}
+        {CLEAR_VARIABLE y_dwarf}
         [endlevel]
             bonus=yes
             carryover_add=true
             carryover_percentage=80
             result=victory
-            {CLEAR_VARIABLE cave_position,chasm_position}
         [/endlevel]
     [/event]
 
@@ -468,9 +473,12 @@
             speaker=Glauco
             message= _ "All these attacks are exhausting us; we won't be able to cross the hills! We must retreat; the mission failed!"
         [/message]
+        {CLEAR_VARIABLE cave_position}
+        {CLEAR_VARIABLE chasm_position}
+        {CLEAR_VARIABLE x_dwarf}
+        {CLEAR_VARIABLE y_dwarf}
         [endlevel]
             result=defeat
-            {CLEAR_VARIABLE cave_position,chasm_position}
         [/endlevel]
     [/event]
 [/scenario]
