Update S04, "The Bloody Hills"
the `[unit]` tag doesn't take the `controller=ai` key; that's a SideWML key
also buff the Matronly Ogresses a bit

--- a/scenarios/04_The_Bloody_Hills.cfg
+++ b/scenarios/04_The_Bloody_Hills.cfg
@@ -141,6 +141,9 @@
 
         [delay]
             time=2000
+#ifdef DEBUG_MODE
+            accelerate=yes
+#endif
         [/delay]
         [scroll_to_unit]
             [filter]
@@ -174,7 +177,6 @@
             side=2
             x=$chasm_position[$bat_position].x
             y=$chasm_position[$bat_position].y
-            controller=ai
         [/unit]
 
         [sound]
@@ -212,7 +214,6 @@
             side=2
             x=$cave_position[$wolf_position].x
             y=$cave_position[$wolf_position].y
-            controller=ai
         [/unit]
         [sound]
             name=wolf-growl-1.ogg
