--- a/units/Matronly_Ogresses.cfg
+++ b/units/Matronly_Ogresses.cfg
@@ -8,7 +8,8 @@
     gender=female
     image="units/new_ogres/matronly-ogresses.png"
     profile="portraits/monsters/young-ogre.png"
-    hitpoints=45
+    # Only ever a player or allied unit, so we can do this:
+    hitpoints={ON_DIFFICULTY 49 47 45}
     movement_type=largefoot
     [resistance]
         arcane=80
