--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -56,9 +56,31 @@
         canrecruit=yes
         recruit=Naga Fighter,Naga Warrior,Naga Hunter,Naga Guardian,Naga Dirkfang
         x,y=30,7
+        [modifications]
+            {TRAIT_SLOW}
+            {TRAIT_RESILIENT}
+        [/modifications]
         [ai]
             grouping=no
             passive_leader=no
+            [goal]
+                name=protect_unit
+                [criteria]
+                    id=Kssihiss
+                    side=2
+                    canrecruit=yes
+                [/criteria]
+                protect_radius={ON_DIFFICULTY 7 6 5}
+                value={ON_DIFFICULTY 7 8 9}
+            [/goal]
+            [goal]
+                name=protect_location
+                [criteria]
+                    x,y=30,7
+                [/criteria]
+                protect_radius={ON_DIFFICULTY 4 3 2}
+                value={ON_DIFFICULTY 5 6 7}
+            [/goal]
         [/ai]
         {GOLD 100 200 300}
         {INCOME 12 16 20}
@@ -81,6 +103,21 @@
         {GOLD 60 40 20}
         [ai]
             grouping=yes
+            aggression={ON_DIFFICULTY 0.2 0.3 0.4}
+            caution={ON_DIFFICULTY 0.45 0.35 0.25}
+            leader_value={ON_DIFFICULTY 1 2 3}
+            retreat_factor={ON_DIFFICULTY 0.75 0.50 0.25}
+            retreat_enemy_weight={ON_DIFFICULTY 1.2 1.1 1.0}
+            scout_village_targeting={ON_DIFFICULTY 1 2 3}
+            simple_targeting=yes
+            support_villages=yes
+            [avoid]
+                x=27-34
+                y=6-8
+                [or]
+                    terrain=Ss*,Sm,Ww*,Wo*,Ch*,Khs
+                [/or]
+            [/avoid]
         [/ai]
         [attack]
             name=cleaver
@@ -264,6 +301,27 @@
             image="scenery/monolith3.png"
             message= _ "Wesnoth Kingdom - Caravan Station n° 2"
         [/message]
+    [/event]
+
+    [event]
+        name=attack
+        [filter]
+            side=3
+            race=ogre
+        [/filter]
+        [filter_second]
+            id=Kssihiss
+        [/filter_second]
+        [gold]
+            side=2
+            amount={ON_DIFFICULTY 10 20 30}
+        [/gold]
+        [modify_unit]
+            [filter]
+                id=Kssihiss
+            [/filter]
+            goto_x,goto_y=30,7
+        [/modify_unit]
     [/event]
 
     [event]
