--- a/scenarios/05_The_Lizards_Islands.cfg
+++ b/scenarios/05_The_Lizards_Islands.cfg
@@ -49,6 +49,10 @@
         canrecruit=yes
         recruit=Saurian Augur,Saurian Skirmisher,Saurian Oracle,Saurian Soothsayer,Saurian Ambusher
         x,y=36,4
+        [modifications]
+            {TRAIT_SLOW}
+            {TRAIT_RESILIENT}
+        [/modifications]
         [ai]
             grouping=no
             passive_leader=no
@@ -212,6 +216,8 @@
         [/sound]
         {SCROLL_AND_DELAY $x_monster $y_monster 1500}
 #endif
+        {CLEAR_VARIABLE x_monster}
+        {CLEAR_VARIABLE y_monster}
     [/event]
 
     [event]
