--- a/scenarios/05_The_Lizards_Islands.cfg
+++ b/scenarios/05_The_Lizards_Islands.cfg
@@ -57,6 +57,25 @@
             grouping=no
             passive_leader=no
             recruitment_diversity=0.5
+            support_villages=yes
+            [goal]
+                name=protect_unit
+                [criteria]
+                    id=Giksy
+                    side=2
+                    canrecruit=yes
+                [/criteria]
+                protect_radius={ON_DIFFICULTY 7 6 5}
+                value={ON_DIFFICULTY 7 8 9}
+            [/goal]
+            [goal]
+                name=protect_location
+                [criteria]
+                    x,y=36,4
+                [/criteria]
+                protect_radius={ON_DIFFICULTY 2 3 4}
+                value={ON_DIFFICULTY 4 5 6}
+            [/goal]
         [/ai]
         {GOLD 200 300 400}
         {INCOME 8 12 16}
@@ -84,6 +103,9 @@
         user_team_name= _ "Nereids"
         {FLAG_VARIANT long}
         [ai]
+            leader_value={ON_DIFFICULTY 1 2 3}
+            scout_village_targeting={ON_DIFFICULTY 1 2 3}
+            retreat_factor={ON_DIFFICULTY 0.75 0.50 0.25}
             [goal]
                 name=protect_unit
                 [criteria]
@@ -92,6 +114,13 @@
                 protect_radius={ON_DIFFICULTY 10 9 8}
                 value={ON_DIFFICULTY 7 6 5}
             [/goal]
+            [avoid]
+                x=35-37
+                y=3-5
+                [or]
+                    terrain=Co,Ko
+                [/or]
+            [/avoid]
         [/ai]
     [/side]
     {STARTING_VILLAGES_AREA 3 16 27 6}
@@ -251,7 +280,7 @@
         name=turn 16
         [message]
             speaker=Giksy
-            message= _ "We need of ohtersss sssea companionsss, sssummon all them!" # wmllint: no spellcheck
+            message= _ "We need of othersss sssea companionsss, sssummon them all!" # wmllint: no spellcheck
         [/message]
         [fire_event]
             name=create_sea_monsters
