move Amoran signpost to dialogues file
this makes it easier to copyedit it, as per issue #2

--- a/scenarios/01_The_Attack_to_Amoran.cfg
+++ b/scenarios/01_The_Attack_to_Amoran.cfg
@@ -229,11 +229,7 @@
             side=1
             x,y=2,15
         [/filter]
-        [message]
-            speaker=narrator
-            image="scenery/signpost.png"
-            message= _ "Welcome to Amoran, the last town toward Est"
-        [/message]
+        {AMORAN_SIGNPOST_MESSAGE}
     [/event]
 
     [event]
