--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -901,3 +901,11 @@
         message= _ "Here's to hoping it isn't the opportunity for the nagas to get rid of us!"
     [/message]
 #enddef
+
+#define AMORAN_SIGNPOST_MESSAGE
+    [message]
+        speaker=narrator
+        image="scenery/signpost.png"
+        message= _ "Welcome to Amoran, the last Wesnothian town to the east"
+    [/message]
+#enddef
