--- a/scenarios/06_The_Last_Battle.cfg
+++ b/scenarios/06_The_Last_Battle.cfg
@@ -258,11 +258,7 @@
         [/filter]
         [redraw]
         [/redraw]
-        [message]
-            speaker=narrator
-            image="scenery/signpost.png"
-            message= _ "Welcome to Amoran, the last town toward Est"
-        [/message]
+        {AMORAN_SIGNPOST_MESSAGE}
     [/event]
 
     [event]
