--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -115,9 +115,17 @@
                 x=27-34
                 y=6-8
                 [or]
-                    terrain=Ss*,Sm,Ww*,Wo*,Ch*,Khs
+                    terrain=Ss,Ss^Vhs,Ww*,Ww^*,Wo*,Wo^Es,Ch*,Chr^Dr,Khs
                 [/or]
             [/avoid]
+            [goal]
+                name=target_location
+                id=ogres_target_hills
+                [criteria]
+                    terrain=Hhd,Hhd^Es,Hhd^Edb,Hhd^Fds,Hh,Rp,Gg^Es,Gs,Uu^Vu,*^Em*,Gll^Fp
+                [/criteria]
+                value={ON_DIFFICULTY 1 2 3} # (increasing with difficulty because this makes them stupider)
+            [/goal]
         [/ai]
         [attack]
             name=cleaver
@@ -266,6 +274,42 @@
         {MODIFY_UNIT (id=Glubtrub) moves $store_glubtrub.max_moves}
         {MODIFY_UNIT (id=Glubtrub) max_moves $store_glubtrub.max_moves}
         {CLEAR_VARIABLE store_glubtrub}
+
+        [modify_side]
+            side=3 # Ogres
+            [ai]
+                grouping=no
+                support_villages=no
+                aggression={ON_DIFFICULTY 0.32 0.36 0.40}
+                [goal]
+                    [criteria]
+                        race=naga
+                    [/criteria]
+                    value={ON_DIFFICULTY 9 8 7}
+                [/goal]
+                [goal]
+                    [criteria]
+                        id=Kssihiss
+                    [/criteria]
+                    value={ON_DIFFICULTY 7 6 5}
+                [/goal]
+                [goal]
+                    [criteria]
+                        side=2
+                    [/criteria]
+                    value={ON_DIFFICULTY 6 5 4}
+                [/goal]
+                [goal]
+                    name=protect_unit
+                    [criteria]
+                        side=1
+                    [/criteria]
+                    protect_radius={ON_DIFFICULTY 6 5 4}
+                    value={ON_DIFFICULTY 5 4 3}
+                [/goal]
+            [/ai]
+        [/modify_side]
+        {MODIFY_AI_DELETE_GOAL 3 ogres_target_hills} # I give up trying to get this goal to work...
     [/event]
 
     [event]
