--- a/utils/ALA_dialogues.cfg
+++ b/utils/ALA_dialogues.cfg
@@ -412,7 +412,8 @@
     [/message]
     [message]
         speaker=Glubtrub
-        #po: "Wetspot" is ogre-speak for "Wesnoth"; I will try to ensure it's capitalized consistently:
+        #po: "Wetspot" is ogre-speak for "Wesnoth"; I will try to ensure it's capitalized consistently.
+        #po: Also, I'm unsure if by "puppies" he means that ogres keep dogs as pets, or if that's an affectionate way of referring to Young Ogres?
         message= _ "Glubtrub to hate snake! Little fat to eat and bad! They to kill our puppies when they to play near ruins! But soldier with colors of Wetspot never to be friends ogres... I believe... I don't remember well!"
     [/message]
     [message]
