new She-Ogre portrait
commissioned from Mells/ohlyf

--- a/scenarios/03_The_Nagas_Nest.cfg
+++ b/scenarios/03_The_Nagas_Nest.cfg
@@ -310,6 +310,11 @@
             [/ai]
         [/modify_side]
         {MODIFY_AI_DELETE_GOAL 3 ogres_target_hills} # I give up trying to get this goal to work...
+        [message]
+            race=ogre
+            gender=female
+            message=_"Yes! Squash skull of snake! Is time!"
+        [/message]
     [/event]
 
     [event]
