--- a/units/Matronly_Ogresses.cfg
+++ b/units/Matronly_Ogresses.cfg
@@ -7,7 +7,7 @@
     race=ogre
     gender=female
     image="units/new_ogres/matronly-ogresses.png"
-    profile="portraits/monsters/young-ogre.png"
+    profile="portraits/She-Ogre.png"
     # Only ever a player or allied unit, so we can do this:
     hitpoints={ON_DIFFICULTY 49 47 45}
     movement_type=largefoot
