--- a/units/She_Ogre.cfg
+++ b/units/She_Ogre.cfg
@@ -7,7 +7,7 @@
     race=ogre
     gender=female
     image="units/new_ogres/she-ogre.png"
-    profile="portraits/monsters/young-ogre.png"
+    profile="portraits/She-Ogre.png"
     hitpoints=30
     movement_type=largefoot
     [resistance]
