--- a/_main.cfg
+++ b/_main.cfg
@@ -80,6 +80,13 @@
     [/about]
 
     [about]
+        title = _ "She-Ogre portrait"
+        [entry]
+            name = "Mells (ohlyf)"
+        [/entry]
+    [/about]
+
+    [about]
         title = _ "Special thanks for tips and help"
         [entry]
             name = "Nobun"
