new Merfolk descriptions
see https://forums.wesnoth.org/viewtopic.php?p=600216#p600216

--- a/units/Brawler.cfg
+++ b/units/Brawler.cfg
@@ -15,8 +15,8 @@
     alignment=lawful
     cost=19
     usage=fighter
-    #po: Brawlers are also in Dead Water; try to keep the description similar:
-    description= _ "Exceptionally large and strong mermen are sometimes more comfortable with their own fists and tails than with other weapons."
+    #po: new description from Gyra_Solune: https://forums.wesnoth.org/viewtopic.php?p=600216#p600216
+    description= _ "Some schools of merfolk combat are dedicated to perfecting unarmed combat over the use of spear and trident. These practitioners make greater use of their body’s capabilities, favoring a technique using their tails to stagger and dizzy opponents, before finishing them off with a flurry of devastating punches."
     die_sound=mermen-die.ogg
     {DEFENSE_ANIM "units/merfolk/brawler-defend.png" "units/merfolk/brawler-defend.png" mermen-hit.wav }
     [portrait]
