--- a/units/Citizen.cfg
+++ b/units/Citizen.cfg
@@ -15,8 +15,8 @@
     advances_to=Merman Brawler,Merman Fighter,Merman Hunter
     cost=9
     usage=fighter
-    #po: Merman Citizens are also in Dead Water; try to keep the description similar:
-    description= _ "Mermen are mostly peaceful, but will fight to defend their homes. In this situation, even mermen with no weapons or training can be dangerous."
+    #po: new description from Gyra_Solune: https://forums.wesnoth.org/viewtopic.php?p=600216#p600216
+    description= _ "While the merfolk kingdoms are not usually warlike, their citizens nonetheless are all trained in the basics of combat should their city come under attack. As metal weaponry is scarce due to the inability to forge underwater, every merman is taught how to fight with their bare fists, to surprising effect."
     die_sound=mermen-die.ogg
     {DEFENSE_ANIM "units/merfolk/citizen-defend.png" "units/merfolk/citizen-defend.png" mermen-hit.wav }
     [portrait]
