--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,9 +16,15 @@ jobs:
       uses: czyzby/wesnoth-wml-linter@v1
       with:
         wesnoth-version: ${{ env.WESNOTH_VERSION }}
-        spellcheck: false
+        spellcheck: true
+        lint-flags: -K
     - name: Verify resources scope
       uses: czyzby/wesnoth-wml-scope@v1
+      if: always()
+      with:
+        wesnoth-version: ${{ env.WESNOTH_VERSION }}
+    - name: Verify images
+      uses: czyzby/wesnoth-png-optimizer@v1
       if: always()
       with:
         wesnoth-version: ${{ env.WESNOTH_VERSION }}
