--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        path: add-ons
     - name: Lint WML
       uses: czyzby/wesnoth-wml-linter@v1
       with:
